jobportal-react-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jobportal-react-service
spec:
  selector:
    app: jobportal-react
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
