jobportal-springboot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jobportal-springboot
spec:
  selector:
    app: jobportal-springboot
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
