service.yml
apiVersion: v1 
kind: Service
metadata:
  name: mongo
spec:
  selector: #selector it for label or i can it is an match expression
    app: mongo #in service selector should match watever deployment you have created
  ports:
  - port: 27017 #service port
    targetPort: 27017 # container port
