jobportal-ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: jobportal-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /?(.*)
          backend:
            serviceName: jobportal-react-service
            servicePort: 80
        - path: /api/?(.*)
          backend:
            serviceName: jobportal-springboot
            servicePort: 8080
